fixed a few more alignment and font sizing issues in galleries

--- a/_css/_layout.scss
+++ b/_css/_layout.scss
@@ -87,7 +87,7 @@
     margin-top: 32px;
   }
   @include breakpoint(small down) {
-    margin-top: 50px;
+    margin-top: 60px;
   }
 }
 
